音视频基础

--- a/001_音视频基础.md
+++ b/001_音视频基础.md
@@ -1,5 +1,9 @@
 # 音视频基础
 
+
+
+## 音频
+
 **音频的本质**
 
 + 从麦克风采集，到扬声器播放
@@ -12,4 +16,57 @@
 > 我们在音频处理的时候经常会接触到`PCM`数据：它是模拟音频信号经模数转换（A/D变换）直接形成的二进制序列，该文件没有附加的文件头和文件结束标志。
 >
 > 声音本身是模拟信号，而计算机只能识别数字信号，要在计算机中处理声音，就需要将声音数字化，这个过程叫经模数转换（A/D变换）。最常见的方式是透过脉冲编码调制`PCM(Pulse Code Modulation)` 。
+
+**音频属性**
+
+参考：[音频属性相关：声道、采样率、采样位数、样本格式、比特率](https://www.cnblogs.com/yongdaimi/p/10722355.html)
+
++ 采样频率 - 每秒对声音进行采集的次数
+
++ 采样位数
+
+  > 我们知道声音有轻有响，影响声音[响度](https://baike.baidu.com/item/响度)的物理要素是[振幅](https://baike.baidu.com/item/振幅)，作为[数码录音](https://baike.baidu.com/item/数码录音)，必须也要能精确表示乐曲的轻响，所以一定要对波形的振幅有一个精确的描述
+
++ 声道
+
+  + 单声道 - mono
+  + 双声道 - stereo，最常见的类型，包含左声道以及右声道
+
+
+
+
+
+## 视频
+
+在现实世界中，如果每秒刷新超过24张图片，看起来就很连续
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
