音视频基础

--- a/001_音视频基础.md
+++ b/001_音视频基础.md
@@ -38,33 +38,71 @@
 
 ## 视频
 
-在现实世界中，如果每秒刷新超过24张图片，看起来就很连续
+在现实世界中，如果每秒刷新超过24张图片，看起来就很连续，参考：[零基础入门：实时音视频技术基础知识全面盘点](http://www.52im.net/thread-3079-1-1.html)
+
+![001](https://github.com/winfredzen/VideoAudio/blob/main/images/001.gif)
+
++ 帧 - 是视频的一个基本概念，表示一张画面，如上面的翻页动画书中的一页，就是一帧。一个视频就是由许许多多帧组成的
+
++ 帧率 - 即单位时间内帧的数量，单位为：帧/秒 或`fps`（`frames per second`）。如动画书中，一秒内包含多少张图片，图片越多，画面越顺滑，过渡越自然
+
++ 分辨率 
+
+  > 参考：[科普：视频分辨率是什么？](https://www.reneelab.com.cn/m/2k-4k-video-resolution.html)
+  >
+  > 视频分辨率又可称为视频解析度、解像度，指的是视频图像在一个单位尺寸内的精密度。当我们把一个视频放大数倍时，就会发现许多小方点，这些点就是构成影像的单位——像素。
+  >
+  > 视频的分辨率与像素密不可分，比如一个视频的分辨率为`1280*720`,就代表了这个视频的水平方向有`1280`个像素，垂直方向有`720`个像素。
+  >
+  > ![002](https://github.com/winfredzen/VideoAudio/blob/main/images/002.jpg)
+
++ 码率 - 视频码率就是数据传输时单位时间传送的数据位数，一般我们用的单位是`kbps`即千位每秒。一般来说RAW格式的码率比较大，每一张图片可以进行压缩
 
 
 
+**视频采集**
+
+从摄像头，sensor，感光元件，拍摄现实世界画面，把它存储为数字格式文件，如
+
++ JPG
++ RAW
++ YUV - 方便进行编码
+
+通过`H.264`算法进行压缩。在网络传输的时候，在保证清晰度、分辨率的情况下，尽量降低视频的数据量，就更适合视频传输
 
 
 
+**视频容器**
+
+包含音频，编码后的视频数据，视频的关键数据（分辨率、帧率、时间戳等等）
+
++ mp4
++ mkv
++ avi
++ wmv
 
 
 
+**视频编码**
+
+为什么需要视频编码？主要为了存储和传输。
+
+通过压缩算法，进行视频编码
+
++ 硬件编码 - iOS、Android，它们都自带硬件编码芯片
++ 软件编码 - 软件编码效率比较低，满足低端的、普通的视频聊天用，如open264、x264库
 
 
 
+**H.264压缩算法**
 
+H.264视频压缩算法是目前市面上应用最广泛的视频压缩技术
 
+H.264视频压缩方式，参考：
 
++ [H.264基本原理与编码流程](https://www.cnblogs.com/Lxk0825/p/9925041.html)
 
-
-
-
-
-
-
-
-
-
-
+![003](https://github.com/winfredzen/VideoAudio/blob/main/images/003.png)
 
 
 
