--- a/001_音视频基础.md
+++ b/001_音视频基础.md
@@ -108,3 +108,48 @@ H.264视频压缩方式，参考：
 
 
 
+## 网络传输
+
+大部分的应用，大都基于2个基础的网络通信协议，TCP/IP UDP
+
++ TCP/IP - 可靠，适合数据量比较小的应用，比如web应用
+  + 优点 - 在没有网络故障的情况下，绝对可靠
+  + 缺点 - 传统的RTMP直播，4秒以上的延迟
++ UDP - 不可靠。适合做大量数据的传输，比如说，音视频。用UDP的时候，不能直接使用，要做大量的工作，比如，一定程度上的可靠性、丢包重传、完整性、网络拥塞控制等
+  + 优点 - 高效率
+  + 缺点 - 不可靠
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
