音视频基础

--- a/001_音视频基础.md
+++ b/001_音视频基础.md
@@ -123,6 +123,24 @@ H.264视频压缩方式，参考：
 
 
 
+目前有2种基础的应用架构
+
++ 流媒体转发 
+  + 优点 - 支持百万、千万级别的客户端同时观看
+  + 缺点 - 资源、带宽消耗大
+
+![004](https://github.com/winfredzen/VideoAudio/blob/main/images/004.png)
+
+
+
++ P2P 
+  + 优点 - 节省服务器资源
+  + 缺点 - 不能做百万级别的人同时观看，不能做回放
+
+![005](https://github.com/winfredzen/VideoAudio/blob/main/images/005.png)
+
+
+
 
 
 
