--- a/Basic/001_音频基础.md
+++ b/Basic/001_音频基础.md
@@ -15,3 +15,48 @@
 采集的数据就是`PCM`数据，经过编码器编码为相应的数据
 
 ![012](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/012.png)
+
+
+
+## 声音
+
+声音由物体的振动产生，通过介质传播，振动耳膜
+
+**人类听觉范围**
+
+![013](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/013.png)
+
+
+
+**声音三要素**
+
++ 音调 - 音频的快慢
++ 音量 - 振动的幅度
++ 音色 - 谐波
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
