--- a/Basic/001_音频基础.md
+++ b/Basic/001_音频基础.md
@@ -36,13 +36,40 @@
 
 
 
+**模数转换**
+
+模拟信号转为数字信号
 
 
 
+**音频原始数据**
+
+音频原始数据格式
+
++ PCM
++ WAV  - 既可以存储原始数据，也可以存储压缩数据
 
 
 
+量化
 
++ 采样大小（位深） - 一个采样用多少bit存放。常用的是`16bit`
++ 采样率 
++ 声道数：单声道、双声道、多声道
+
+
+
+码率计算
+
+![015](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/015.png)
+
+
+
+**WAV Header**
+
+![016](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/016.png)
+
+![017](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/017.png)
 
 
 
