--- a/Basic/002_音频采集.md
+++ b/Basic/002_音频采集.md
@@ -105,6 +105,44 @@ ffplay out.wav
 
 
 
+## Mac App实现
+
+1.导入lib库和头文件
+
+2.xcode设置path
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
  
