--- a/Basic/002_音频采集.md
+++ b/Basic/002_音频采集.md
@@ -113,21 +113,84 @@ ffplay out.wav
 
 
 
+![020](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/020.png)
+
+
+
+**采集音频的步骤**
+
++ 注册设备
++ 设置采集方式 avfoundation/dshow/alsa
++ 打开音频设备
+
+
+
+在试验中遇到的一些问题：
+
+1.swift中调用c函数，需要桥接文件
+
+2.`avformat_open_input`报错如"Protocol not found"，需要添加麦克风访问权限，在`info.plis`t和`Capabilities`中都要设置
+
+3.`av_read_frame`一直返回`-35`，原因是设备还没有准备好，可以使用延时，或者循环等待
+
+4.`fopen`打开文件返回NULL，文件访问权限的原因，可
+
+> Signing & Capabilities -> App Sandbox -> File Access Type 其中Downloads Folder 的权限修改为Read/Write
+
+5.`ffplay -ar 44100 -ac 1 -f f32le audio.pcm`使用ffplay播放pcm录音
+
+例如，我在mac上使用耳机的麦克风来录音，我怎么知道采样率、通道、采样大小是多少呢？
+
+可通过mac上的**音频MIDI设置**程序来查看，如：
+
+![021](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/021.png)
 
 
 
 
 
+## 其它
+
+其它可参考：
+
++ [【秒懂音视频开发】08_音频录制02_编程 ](https://www.cnblogs.com/mjios/p/14540642.html)
 
 
 
+1.`ffplay -ar 44100 -ac 1 -f f32le audio.pcm`的含义
+
+参考：
+
++ [【秒懂音视频开发】09_播放PCM ](https://www.cnblogs.com/mjios/p/14581738.html)
 
 
 
+- *ar*：采样率
+
+- *ac*：声道数
+
+- f
+
+  ：采样格式
+
+  - *s16le*：PCM signed 16-bit little-endian
+  - 更多PCM的采样格式可以使用命令查看
+    - Windows：*ffmpeg -formats | findstr PCM*
+    - Mac：*ffmpeg -formats | grep PCM*
 
 
 
+`ffmpeg -formats | grep PCM`执行结果如下：
 
+![022](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/022.png)
+
+
+
+## 代码
+
+
+
++ [MyAudio](https://github.com/winfredzen/VideoAudio/tree/main/Basic/code/MyAudio)
 
 
 
