--- a/Basic/002_音频采集.md
+++ b/Basic/002_音频采集.md
@@ -18,6 +18,14 @@
 
 1.通过命令的方式
 
+> 1. Windows采集音频数据使用的是 dshow 技术。
+> 2. Linux采集音频数据使用的是 alsa/oss 技术。
+> 3. Mac采集音频数据使用的是 avfoundation 技术。
+>
+> 采集音频数据的命令格式如下：ffmpeg -f 采集技述 -i 设备（可以是设备名或设备索引） 输出媒体名称。
+>
+> 如：`ffmpeg -f avfoundation -i ":0" out.wav`
+
 2.通过API的方式
 
 
