--- a/Basic/003_音频编码.md
+++ b/Basic/003_音频编码.md
@@ -7,6 +7,10 @@
 
 
 
+## 有损编码
+
+
+
 信号的遮蔽分为
 
 + 频域遮蔽
@@ -29,6 +33,84 @@
 ![025](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/025.png)
 
 > 假设一个很响的声音后面紧跟着一个很弱的声音，而时间差在200ms 之内，弱音就很难听到，相反在弱音后紧跟着一个很强的音，而时间在 50ms 之内，弱音也是很难听到。当然这个对强弱音的音压差距也会产生不同的遮蔽程度。
+
+
+
+## 无损编码
+
+完全还原原来的数据
+
+熵编码
+
++ 哈夫曼编码
++ 算术编码
++ 香农编码
+
+
+
+## 音频编码原理
+
+![026](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/026.png)
+
+
+
+## 音频编解码比较
+
+1.OPUS - WEBRTC默认使用OPUS
+
+2.AAC - 直播系统中应用的比较广泛
+
+3.G.711 - 固话
+
+![027](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/027.png)
+
+
+
+### AAC
+
+> **进阶音讯编码**（英语：**A**dvanced **A**udio **C**oding，AAC）是[有损音讯压缩](https://zh.m.wikipedia.org/wiki/破壞性資料壓縮#音訊壓縮)的[专利](https://zh.m.wikipedia.org/wiki/專利)[数位音讯](https://zh.m.wikipedia.org/wiki/數位音訊)编码标准，由[Fraunhofer IIS](https://zh.m.wikipedia.org/wiki/弗劳恩霍夫协会)、[杜比实验室](https://zh.m.wikipedia.org/wiki/杜比實驗室)、[贝尔实验室](https://zh.m.wikipedia.org/wiki/貝爾實驗室)、[Sony](https://zh.m.wikipedia.org/wiki/Sony)、[Nokia](https://zh.m.wikipedia.org/wiki/Nokia)等公司共同开发。出现于1997年，为一种基于[MPEG-2](https://zh.m.wikipedia.org/wiki/MPEG-2)的标准，2000年，[MPEG-4](https://zh.m.wikipedia.org/wiki/MPEG-4)标准在原本的基础上加上了PNS（Perceptual Noise Substitution）等技术，并提供了多种扩展工具。为了区别于传统的MPEG-2 AAC又称为MPEG-4 AAC。其作为[MP3](https://zh.m.wikipedia.org/wiki/MP3)的后继者而被设计出来，在相同的[位元速率](https://zh.m.wikipedia.org/wiki/比特率)之下，AAC相较于MP3通常可以达到更好的声音品质
+
+> **高效[AAC](https://zh.m.wikipedia.org/wiki/AAC)**（**HE-AAC**，英语：**H**igh-**E**fficiency **AAC**）为[有损数据压缩](https://zh.m.wikipedia.org/wiki/有損數據壓縮)技术，是对**进阶音讯编码**（[AAC](https://zh.m.wikipedia.org/wiki/AAC)）的扩展。HE-AAC v1使用[频段复制](https://zh.m.wikipedia.org/w/index.php?title=频段复制&action=edit&redlink=1)（英语：[Spectral Band Replication](https://en.wikipedia.org/wiki/Spectral_Band_Replication)）（SBR，英语：Spectral Band Replication）提高[频域](https://zh.m.wikipedia.org/wiki/频域)的压缩效率，适用于低码率（64kbps以下）。HE-AAC v2结合使用SBR和[参数立体声](https://zh.m.wikipedia.org/w/index.php?title=参数立体声&action=edit&redlink=1)（英语：[Parametric Stereo](https://en.wikipedia.org/wiki/Parametric_Stereo)）（PS，英语：Parametric Stereo）提高立体声信号的压缩效率。HE-AAC v2进一步降低了对码率的需求（接近于50%），被应用于类似于[DAB](https://zh.m.wikipedia.org/wiki/DAB)等码率资源很有限的领域。
+
+![028](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/028.png)
+
+![029](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/029.png)
+
+![030](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/030.png)
+
+ADTS可以在任意帧解码，**也就是说它每一帧都有头信息**。ADIF只有一个统一的头，所以必须得到所有的数据后解码。
+
+#### ADTS格式
+
+ AAC音频文件的每一帧由**ADTS Header和AAC Audio Data**组成。结构体如下：
+
+![031](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/031.png)
+
+[ADTS](https://wiki.multimedia.cx/index.php/ADTS) header的表示
+
+![032](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/032.png)
+
+可参考：
+
++ [aac-heade](https://www.p23.nl/projects/aac-header/)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
