--- a/Basic/003_音频编码.md
+++ b/Basic/003_音频编码.md
@@ -98,6 +98,54 @@ ADTS可以在任意帧解码，**也就是说它每一帧都有头信息**。ADI
 
 
 
+## FFmpeg生成AAC
+
+![033](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/033.png)
+
+一些解释，参考：[ffmpeg Documentation](https://ffmpeg.org/ffmpeg.html)
+
+```shell
+ffmpeg [global_options] {[input_file_options] -i input_url} ... {[output_file_options] output_url} ...
+```
+
+
+
+`-vn`  - 没有video
+
+> As an input option, blocks all video streams of a file from being filtered or being automatically selected or mapped for any output. See `-discard` option to disable streams individually.
+>
+> As an output option, disables video recording i.e. automatic selection or mapping of any video stream. For full manual control see the `-map` option.
+
+`-c[:stream_specifier] codec (input/output,per-stream)` - 指定编码器，`a`表示audio
+
+`-ar` - 音频的采样率
+
+`-channels` - 通道
+
+`-profile:a aac_he_v2` - 对`libfdk_aac` 的一些设置，指定为`aac_he_v2`，可参考：
+
++ [AAC](https://trac.ffmpeg.org/wiki/Encode/AAC)
+
+如：
+
+```shell
+ffmpeg -i input.wav -c:a libfdk_aac -profile:a aac_he_v2 -b:a 32k output.m4a
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
