--- a/Basic/003_音频编码.md
+++ b/Basic/003_音频编码.md
@@ -134,6 +134,12 @@ ffmpeg -i input.wav -c:a libfdk_aac -profile:a aac_he_v2 -b:a 32k output.m4a
 
 
 
+`libfdk-aac`的一些配置，参考：
+
++ [libfdk-aac](https://www.ffmpeg.org/ffmpeg-codecs.html#libfdk_005faac)
+
+
+
 
 
 
