--- a/Basic/003_音频编码.md
+++ b/Basic/003_音频编码.md
@@ -142,21 +142,77 @@ ffmpeg -i input.wav -c:a libfdk_aac -profile:a aac_he_v2 -b:a 32k output.m4a
 
 
 
+## libfdk-aac
+
+[8.5 libfdk_aac](https://www.ffmpeg.org/ffmpeg-codecs.html#toc-libfdk_005faac)中的说明：
+
+> libfdk-aac AAC (Advanced Audio Coding) encoder wrapper.
+>
+> The libfdk-aac library is based on the Fraunhofer FDK AAC code from the Android project.
+>
+> Requires the presence of the libfdk-aac headers and library during configuration. You need to explicitly configure the build with `--enable-libfdk-aac`. The library is also incompatible with GPL, so if you allow the use of GPL, you should configure with `--enable-gpl --enable-nonfree --enable-libfdk-aac`.
+>
+> This encoder has support for the AAC-HE profiles.
+>
+> VBR encoding, enabled through the vbr or flags +qscale options, is experimental and only works with some combinations of parameters.
+>
+> Support for encoding 7.1 audio is only available with libfdk-aac 0.1.3 or higher.
+>
+> For more information see the fdk-aac project at http://sourceforge.net/p/opencore-amr/fdk-aac/.
 
 
 
+如果直接运行命令，可能会提示如下的错误：
+
+![034](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/034.png)
+
+需要重新编译ffmpeg，添加对`libfdk-aac`的支持
+
+参考：
+
++ [【秒懂音视频开发】14_编译FFmpeg](https://www.cnblogs.com/mjios/p/14633516.html)
 
 
 
+1.先安装libfdk-aac
+
+```shell
+brew install fdk-aac
+```
+
+否则会提示：
+
+![035](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/035.png)
+
+2.编译
+
+```shell
+./configure --prefix=/Users/wangzhen/Movies/code/output --enable-shared --disable-static --enable-gpl --enable-nonfree --enable-libfdk-aac --enable-libx264 --enable-libx265
+make -j8
+make install
+```
 
 
 
+在视频中提取音频转为aac编码
+
+```shell
+./ffmpeg -i /Users/wangzhen/Movies/input.mp4 -vn -c:a libfdk_aac -ar 44100 -channels 2 -profile:a aac_he audio.aac
+```
+
+播放aac音频
+
+![036](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/036.png)
 
 
 
+**遇到问题**
 
+1.`Unable to initialize the encoder: Invalid config`
 
+![037](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/037.png)
 
+解决方法：去掉`v2`
 
 
 
