--- a/Basic/005_音频编码AAC.md
+++ b/Basic/005_音频编码AAC.md
@@ -257,3 +257,61 @@ void set_status(int status) {
 
 ```
 
+使用`ffplay audio.aac`播放aac
+
+![045](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/045.png)
+
+
+
+遇到的问题：
+
+1.如果将`codec_ctx->profile = FF_PROFILE_AAC_HE_V2`，播放时会有很多的杂音，不知道是什么原因？
+
+我自己的理解：
+
+参考[【秒懂音视频开发】15_AAC编码实战 ](https://www.cnblogs.com/mjios/p/14642335.html)
+
+> fdk-aac对输入的PCM数据是有[参数要求](https://wiki.hydrogenaud.io/index.php?title=Fraunhofer_FDK_AAC#Sample_Format)的，如果参数不对，就会出现以下错误：
+>
+> ```
+> [libfdk_aac @ 0x7fa3db033000] Unable to initialize the encoder: SBR library initialization error
+> Error initializing output stream 0:0 -- Error while opening encoder for output stream #0:0 - maybe incorrect parameters such as bit_rate, rate, width or height
+> Conversion failed!
+> ```
+>
+> 采样格式必须是16位整数PCM
+
+另外参考[FFmpeg --MAC 使用及问题记录](https://blog.csdn.net/lym594887256/article/details/122080711)
+
+> 如果无法使用`libfdk_aac`库，那么需要检查下ffempeg库编译的时候是否关联的库；可以使用上面的方式关联，也可以自己编译；
+> **FF_PROFILE_AAC_HE_V2 的profile最低要求双声道**
+
+
+
+## 其它
+
+其它可参考：
+
++ [FFmpeg音频 - AAC编码, 解码](https://www.jianshu.com/p/2436addbc118)
++ [IOS播放音频编码AAC_HE_V2无声音，如何解决？](https://cloud.tencent.com/developer/article/1744196)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
