--- a/Basic/006_图像基础.md
+++ b/Basic/006_图像基础.md
@@ -20,3 +20,98 @@
 
 + RGB888（24位）
 + RGBA（32位）
+
+
+
+显示器
+
+![046](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/046.png)
+
++ 图像时数据
++ 屏幕是显示设备
++ 图像数据经过驱动设备让屏幕显示图像
+
+
+
+RGB的色彩问题
+
+1.RGB 与 BGR
+
+> opencv读取图片的默认像素排列是BGR，需要转换
+
+BMP使用的是BGR数据
+
+
+
+
+
+屏幕的指标
+
+1.PPI（pixels per inch）**每英寸像素，**也可以理解为**屏幕像素密度**
+
+2.DPI（Dots per inch）
+
+3.PPI > 300就属于网膜级别
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
