--- a/Basic/006_图像基础.md
+++ b/Basic/006_图像基础.md
@@ -51,25 +51,84 @@ BMP使用的是BGR数据
 
 2.DPI（Dots per inch）
 
-3.PPI > 300就属于网膜级别
+3.PPI > 300就属于视网膜级别
 
 
 
+码率的计算
+
+1.分辨率
+
+x轴的像素个数 * y轴的像素个数
+
+常见的宽高比率 16:9 4:3
+
+360P/720P/1k/2k
 
 
 
+2.帧率
+
+> **帧率**（英语：frame rate）是用于测量显示帧数的[度量](https://zh.wikipedia.org/wiki/度量)。测量单位为“每秒显示帧数”（**f**rame **p**er **s**econd，**FPS**）或“[赫兹](https://zh.wikipedia.org/wiki/赫茲)”，一般来说FPS用于描述视频、电子绘图或游戏每秒播放多少帧。
+
+![047](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/047.png)
 
 
 
+## YUV
+
+[YUV](https://zh.wikipedia.org/zh-sg/YUV)从电视系统发展而来的
+
+![048](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/048.png)
+
+YUV分量
+
+![049](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/049.png)
 
 
 
+**RGB与YUV的关系**
+
++ RGB用于屏幕图像的展示
++ YUV用于采集和编码
+
+相互转换
+
+![050](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/050.png)
 
 
 
+YUV常见格式
+
+可参考：
+
++ [一文读懂 YUV 的采样与格式](https://glumes.com/post/ffmpeg/understand-yuv-format/)
+
+YUV 4:4:4 采样
+
+![052](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/052.png)
+
+YUV 4:2:2 采样
+
+![053](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/053.png)
+
+YUV 4:2:0 采样
+
+![054](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/054.png)
 
 
 
+数据量的计算
+
+YUV 4:2:0 = Y * 1.5
+
+YUV 4:2:0 = RGB / 2
+
+
+
+**YUV4:2:0** 
+
+![051](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/051.png)
 
 
 
