--- a/Basic/006_图像基础.md
+++ b/Basic/006_图像基础.md
@@ -124,6 +124,8 @@ YUV 4:2:0 = Y * 1.5
 
 YUV 4:2:0 = RGB / 2
 
+> YUV被广泛使用
+
 
 
 **YUV4:2:0** 
@@ -132,9 +134,18 @@ YUV 4:2:0 = RGB / 2
 
 
 
+### YUV存储格式
 
+![055](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/055.png)
 
+YUV 的存储格式，有两种：
 
+- planar 平面格式
+  - 指先连续存储所有像素点的 Y 分量，然后存储 U 分量，最后是 V 分量。
+- packed 打包模式
+  - 指每个像素点的 Y、U、V 分量是连续交替存储的
+
+![056](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/056.png)
 
 
 
