--- a/Basic/006_图像基础.md
+++ b/Basic/006_图像基础.md
@@ -149,19 +149,118 @@ YUV 的存储格式，有两种：
 
 
 
+**YUV码流计算**
+
+![057](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/057.png)
 
 
 
 
 
+## 实践
+
+1.生成YUV
+
+通过`ffplay -i input.mp4`，查看mp4的信息
+
+![058](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/058.png)
+
+通过视频生成yuv
+
+```shell
+ffmpeg -i input.mp4 -an -c:v rawvideo -pix_fmt yuv420p out.yuv
+```
+
+> `-an`不要音频
+
+`input.mp4`视频大概30M，**生成的YUV视频有5G**
+
+![059](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/059.png)
+
+
+
+**播放yuv**
+
+```shell
+ffplay -pix_fmt yuv420p -s 1280x720 out.yuv
+```
+
+>需要指定格式、分辨率
+
+![060](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/060.png)
+
+如果指定的格式不对，如指定为`yuv422p`，播放效果如下：
+
+![061](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/061.png)
+
+
+
+**播放y分量**
+
+```shell
+ffplay -pix_fmt yuv420p -s 1280x720 -vf extractplanes='y' out.yuv
+```
+
+> `-vf`滤波器
+
+![062](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/062.png)
+
+
+
+取u分量
+
+```shell
+ffplay -pix_fmt yuv420p -s 1280x720 -vf extractplanes='u' out.yuv
+```
+
+![063](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/063.png)
+
+
+
+取v分量
+
+```shell
+ffplay -pix_fmt yuv420p -s 1280x720 -vf extractplanes='v' out.yuv
+```
+
+![064](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/064.png)
+
+
+
+2.提取各分量
+
+```shell
+ffmpeg -i input.mp4 -filter_complex extractplanes='y+u+v[y][u][v]' -map '[y]' y.yuv -map '[u]' u.yuv -map '[v]' v.yuv 
+```
+
+> `-filter_complex`复杂滤波器
+>
+> `[y][u][v]`表示别名，后面在`map`中就可以使用
+
+![065](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/065.png)
+
+然后，单独播放y文件
+
+```shell
+ffplay -pix_fmt gray -s 1280x720 y.yuv
+```
+
+播放u文件
+
+```shell
+ffplay -pix_fmt gray -s 640x380 u.yuv
+```
+
+> 注意分辨率要除以2
 
 
 
 
 
+## 其它
 
-
-
++ [iOS中的YUV格式](http://www.uiimage.com/YUV/)
++ [IOS 视频格式之YUV](https://www.jianshu.com/p/2933b1cbebf6)
 
 
 
