--- a/Basic/007_YUV视频采集.md
+++ b/Basic/007_YUV视频采集.md
@@ -12,6 +12,12 @@
 
 ![067](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/067.png)
 
+设置帧率
+
+```
+av_dict_set(&options, "framerate", "30", 0);//帧率
+```
+
 3.默认的采样格式yuv420p，mac不支持，会有如下的提示，默认使用的是`uyvy422`
 
 ![068](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/068.png)
@@ -40,7 +46,7 @@ av_dict_set(&options,"pixel_format","nv12", 0);//采样格式
 
 `nv12`是属于`yuv420sp` ，大小为`(640*480*1 + 640*480*0.5 = 460800) `
 
-但packet大小就是这个值了
+但packet大小就不是这个值了
 
 ![070](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/070.png)
 
