--- a/Basic/007_YUV视频采集.md
+++ b/Basic/007_YUV视频采集.md
@@ -6,7 +6,7 @@
 
 1.app的摄像头权限
 
-2.如果没有设置帧率，控制输出会提示如下的内容，表示默认的帧率不被支持，并列出支持的帧率
+2.如果没有设置帧率，控制台输出会提示如下的内容，表示默认的帧率不被支持，并列出支持的帧率
 
 ![066](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/066.png)
 
@@ -14,7 +14,7 @@
 
 设置帧率
 
-```
+```c
 av_dict_set(&options, "framerate", "30", 0);//帧率
 ```
 
