--- a/Basic/008_H264.md
+++ b/Basic/008_H264.md
@@ -27,3 +27,145 @@ GOPGroup of picture（**图像组**），指两个**I**帧之间的距离
 
 ![071](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/071.png)
 
+
+
+## I P B帧
+
+![072](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/072.png)
+
+IDR帧防止错误的传播
+
+![073](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/073.png)
+
+帧与分组的关系
+
+![074](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/074.png)
+
+> 解码时，先解码I帧，再解码P，再解码B帧
+>
+> B帧与B帧之间是没有任何参考的
+
+
+
+**SPS & PPS**
+
+![075](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/075.png)
+
+
+
+## H264压缩技术
+
+帧内压缩
+
+帧间压缩
+
+![076](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/076.png)
+
+
+
+### 宏块
+
+
+
+### 帧内压缩
+
+![077](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/077.png)
+
+帧内预测，H264提供了9种模式
+
+![078](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/078.png)
+
+![079](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/079.png)
+
+![080](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/080.png)
+
+![081](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/081.png)
+
+
+
+
+
+### 帧间压缩
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
