--- a/Basic/008_H264.md
+++ b/Basic/008_H264.md
@@ -65,9 +65,21 @@ IDR帧防止错误的传播
 
 ### 宏块
 
+维基百科的解释[宏区块](https://zh.wikipedia.org/zh-hans/%E5%AE%8F%E5%8D%80%E5%A1%8A)
+
+> **宏区块**或**宏块**（英语：Macroblock）是一种[影像压缩](https://zh.wikipedia.org/wiki/影像壓縮)的[术语](https://zh.wikipedia.org/wiki/术语)。
+>
+> 大区块是运动预测的基本[单位](https://zh.wikipedia.org/wiki/单位)，一张完整的[帧](https://zh.wikipedia.org/wiki/帧)通常会被切割成几个大区块，[MPEG-2](https://zh.wikipedia.org/wiki/MPEG-2)和较早期的[编解码器](https://zh.wikipedia.org/wiki/編解碼器)定义大区块都是8×8[像素](https://zh.wikipedia.org/wiki/像素)，现代的一点编解码器像是[H.263](https://zh.wikipedia.org/wiki/H.263)和[H.264](https://zh.wikipedia.org/wiki/H.264)的大区块通常都是16×16像素和相应区域内的Cb、Cr[色差](https://zh.wikipedia.org/wiki/色差)[信号](https://zh.wikipedia.org/wiki/信号)阵列共同组成。
+>
+> 大区块为基准来选择特定的预测类型，而非整个图像都使用同样的类型：
+>
+> - I图像（Intra pictures）只可含有[节点](https://zh.wikipedia.org/wiki/節點)大区块。
+> - P图像（Predictive pictures）可含有节点大区块或预测大区块 。
+> - B图像（Bi-predictive pictures）可含有节点、预测和前后预测大区块。
 
 
-### 帧内压缩
+
+### 帧内压缩技术
 
 ![077](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/077.png)
 
@@ -85,21 +97,49 @@ IDR帧防止错误的传播
 
 
 
-### 帧间压缩
+### 帧间压缩技术
+
+![082](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/082.png)
+
+视频花屏原因
+
+> GOP分组中有帧丢失，会造成解码端的图像发生错误，出现马赛克
+
+视频卡顿
+
+![083](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/083.png)
+
+
+
+### 无损压缩
+
++ DCT变换
++ VLC压缩
++ CABAC压缩
+
+
+
+### 编码过程
+
+![084](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/084.png)
 
 
 
 
 
+## 码流结构
+
+码流分层
+
++ 网络提取层（NAL）
++ 视频编码层（VCL）
+
+> - VCL：进行视频编解码，包括预测（帧内预测和帧间预测），DCT 变化和量化，熵编码和切分数据等功能，是为了实现更高的视频压缩比。
+> - NAL：负责以网络所要求的恰当的方式对 VCL 数据进行打包和传送。
 
 
 
-
-
-
-
-
-
+![085](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/085.png)
 
 
 
