--- a/Basic/008_H264.md
+++ b/Basic/008_H264.md
@@ -141,9 +141,27 @@ IDR帧防止错误的传播
 
 ![085](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/085.png)
 
+**SODB（String of Data Bits，数据比特串）** -  原始数据比特流，长度不一定是8位，故需要补齐。它由VCL层产生
+
+**RBSP（Raw Byte Sequence Payload，原始字节序列载荷）** -  `SODB + trailing bits` 在 SODB 的后面添加了结尾比特和若干比特`0`，以便字节对齐
+
+可参考：
+
++ [SODB RBSP EBSP 的区别与联系](http://lazybing.github.io/blog/2017/06/22/sodb-rbsp-ebsp/)
 
 
 
+**NALU** 
+
+`NAL Header(1byte) +  RBSP`
+
+![086](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/086.png)
+
+![087](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/087.png)
+
+![088](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/088.png)
+
+>  Annexb格式 - 在文件中保存，每个NAL单元前面都加一个start code，如果只是在网络传输，可以不包含start code，即为RTP码流
 
 
 
