视频编解码

--- a/Basic/009_视频编解码一.md
+++ b/Basic/009_视频编解码一.md
@@ -65,3 +65,44 @@
 ## 其它参数
 
 ![092](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/021.png)
+
+> `pic_width_in_mbs_minus1`
+>
+> 用于计算图像的宽度。单位为宏块个数，因此图像的实际宽度为:
+>
+> `frame_width = 16 × (pic\_width\_in\_mbs_minus1 + 1)`
+
+> `pic_height_in_map_units_minus1`
+>
+> 使用`PicHeightInMapUnits`来度量视频中一帧图像的高度。`PicHeightInMapUnits`并非图像明确的以像素或宏块为单位的高度，而需要考虑该宏块是帧编码或场编码。`PicHeightInMapUnits`的计算方式为：
+>
+> `PicHeightInMapUnits = pic\_height\_in\_map\_units\_minus1 + 1;`
+
+![093](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/093.png)
+
+![094](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/094.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
