视频编解码

--- a/Basic/009_视频编解码一.md
+++ b/Basic/009_视频编解码一.md
@@ -84,11 +84,29 @@
 
 
 
+## PPS
+
+> H.264中另一重要的参数集合为图像参数集Picture Paramater Set(PPS)。通常情况下，PPS类似于SPS，在H.264的裸码流中单独保存在一个NAL Unit中，只是PPS NAL Unit的nal_unit_type值为8；而在封装格式中，PPS通常与SPS一起，保存在视频文件的文件头中。
+
+![095](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/095.png)
 
 
 
 
 
+## Slice Header
+
+![096](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/096.png)
+
+
+
+## 分析工具
+
+1.StreamEye
+
+2.CodecVisa
+
+3.雷神开发的工具
 
 
 
