--- a/Basic/010_H264编码.md
+++ b/Basic/010_H264编码.md
@@ -4,7 +4,7 @@
 
 1.打开编码器
 
-2.转换NV12到YUV420P(`NV12` 属于 `YUV420SP` 格式)
+2.转换NV12到YUV420P(`NV12` 属于 `YUV420SP` 格式，编码器要求的格式就是`YUV420P`)
 
 3.准备编码数据AVFrame
 
@@ -28,4 +28,344 @@ brew install x265
 ```shell
 ./configure --prefix=/Users/wangzhen/Movies/code/output --enable-debug=3 --enable-shared --disable-static --enable-gpl --enable-nonfree --enable-libfdk-aac --enable-libx264 --enable-libx265 --enable-libopus
 ```
+
+
+
+2.编码的h264视频质量差，看起来有很多方块
+
+需要设置`pts`，`frame->pts = base++;`
+
+
+
+
+
+## x264参数
+
++ 预设值
++ 帧相关参数
++ 码流相关
++ 编码分析
++ 输出
+
+
+
+可参考：
+
++ [X264 Settings](http://www.chaneru.com/Roku/HLS/X264_Settings.htm)
++ [x264 FFmpeg Options Guide](https://sites.google.com/site/linuxencoding/x264-ffmpeg-mapping)
+
+
+
+## 代码
+
+如下的代码是录制视频，转为h264编码
+
+```c
+#include "testc.h"
+
+//录制状态
+static int rec_status = 0;
+
+#define V_WIDTH 640
+#define V_HEIGHT 480
+
+//打开编码器
+static void open_encoder(int width, int height, AVCodecContext **enc_ctx) {
+    int ret = 0;
+    AVCodec *codec = NULL;
+    codec = avcodec_find_encoder_by_name("libx264");
+    if (!codec) {
+        printf("Codec libx264 not found!!!\n");
+        exit(1);
+    }
+    //创建上下文
+    *enc_ctx = avcodec_alloc_context3(codec);
+    if (!enc_ctx) {
+        printf("enc_ctx === NULL !!!\n");
+        exit(1);
+    }
+    
+    //参数设置
+    (*enc_ctx)->profile = FF_PROFILE_H264_HIGH;
+    (*enc_ctx)->level = 50;//表示level是5.0，支持720p
+    
+    //设置分辨率
+    (*enc_ctx)->width = width;//640
+    (*enc_ctx)->height = height;//480 设置分辨率
+    
+    //GOP
+    (*enc_ctx)->gop_size = 250;
+    (*enc_ctx)->keyint_min = 25;//minimum GOP size
+    
+    //B帧
+    (*enc_ctx)->max_b_frames = 3;
+    (*enc_ctx)->has_b_frames = 1;
+    
+    //参考帧的数量
+    (*enc_ctx)->refs = 3;
+    
+    //设置要编码数据的像素格式（设置输入）
+    (*enc_ctx)->pix_fmt = AV_PIX_FMT_YUV420P;
+    
+    //设置码流
+    (*enc_ctx)->bit_rate = 1000000; //600kbps
+    
+    //设置帧率
+    (*enc_ctx)->time_base = (AVRational){1, 25};//帧与帧间的间隔就是time_base
+    (*enc_ctx)->framerate = (AVRational){25, 1};//帧率，每秒25帧
+    
+    //打开
+    ret = avcodec_open2((*enc_ctx), codec, NULL);
+    if (ret < 0) {
+        printf("avcodec_open2 failded %s!!!\n", av_err2str(ret));
+        exit(1);
+    }
+}
+
+//打开设备
+static AVFormatContext* open_dev() {
+    int ret = 0;
+    //出错信息
+    char errors[1024] = {0, };
+    
+    AVFormatContext *fmt_ctx = NULL;
+    AVDictionary *options = NULL;
+    
+    //格式[[VIDEO]:[AUDIO]]，只采集视频 0 -表示摄像头 1- 表示桌面
+    char *devciename = "0";
+    
+    //register audio device
+    avdevice_register_all();
+    
+    //get格式
+    AVInputFormat *inputFormat = av_find_input_format("avfoundation");
+    
+    //采集视频需要设置一些参数
+    enum AVPixelFormat av_fmt = AV_PIX_FMT_NV12;
+    av_dict_set(&options, "video_size", "640x480", 0);//分辨率
+    av_dict_set(&options, "framerate", "30", 0);//帧率
+    av_dict_set(&options,"pixel_format","nv12", 0);//采样格式 nv12=yuv420sp
+    
+    
+    //打开输入设备
+    ret = avformat_open_input(&fmt_ctx, devciename, inputFormat, &options);
+    if (ret < 0) {
+        av_strerror(ret, errors, 1024);
+        fprintf(stderr, "Failded to open device [%d]%s\n", ret, errors);
+        return NULL;
+    }
+    return fmt_ctx;
+}
+
+//创建AVFrame
+static AVFrame * create_frame(int width, int height) {
+    int ret = 0;
+    AVFrame *frame = NULL;
+    frame = av_frame_alloc();
+    if (!frame) {
+        printf("Error, No Memory!\n");
+        goto __ERROR;
+    }
+    frame->width = width;
+    frame->height = height;
+    frame->format = AV_PIX_FMT_YUV420P;
+    
+    //alloc inner memory
+    ret = av_frame_get_buffer(frame, 32);//按32位对齐
+    if (ret < 0) {
+        printf("Error, Failed to alloc buffer for frame!\n");
+        goto __ERROR;
+    }
+    return frame;
+    
+__ERROR:
+    if (frame) {
+        av_frame_free(&frame);
+    }
+    return NULL;
+}
+
+static void encode(AVCodecContext *enc_ctx, AVFrame *frame, AVPacket *packet, FILE *file) {
+    if (!enc_ctx) {
+        printf("enc_ctx == NULL\n");
+        return;
+    }
+    if (!frame) {
+        printf("frame == NULL\n");
+        return;
+    }
+    if (!packet) {
+        printf("packet == NULL\n");
+        return;
+    }
+    if (frame) {
+        printf("send frame to encoder, pts = %lld\n", frame->pts);
+    }
+    
+    //从编码器获取编码好的数据
+    int ret = 0;
+    ret = avcodec_send_frame(enc_ctx, frame);
+    if (ret < 0) {
+        printf("Error, Failded to send a frame for encoding! \n");
+        exit(1);
+    }
+    
+    while (ret >= 0) {
+        //如果编码器数据不足时，会返回EAGAIN，或者，到数据结尾时会返回AVERROR_EOF
+        ret = avcodec_receive_packet(enc_ctx, packet);
+        if (ret == AVERROR(EAGAIN) || ret == AVERROR_EOF) {
+            return;
+        } else if (ret < 0) {
+            printf("Error, encoding video frame!!!\n");
+            exit(-1);
+        }
+        //写入文件
+        fwrite(packet->data, 1, packet->size, file);
+        fflush(file);
+        
+        av_packet_unref(packet);
+    }
+    
+}
+
+void record_video() {
+    printf("This is c function\n");
+    
+    AVFormatContext *fmt_ctx = NULL;
+    int ret = 0;
+    int base = 0;
+    //读数据
+    AVPacket pkt;
+    //编码上下文
+    AVCodecContext *enc_ctx = NULL;
+    
+    av_log_set_level(AV_LOG_DEBUG);
+    av_log(NULL, AV_LOG_DEBUG, "Hello FFmpeg!!!\n");
+    
+    rec_status = 1;
+    
+    //创建文件
+    char *out = "/Users/wangzhen/Downloads/video.yuv";
+    char *h264 = "/Users/wangzhen/Downloads/video.h264";
+    FILE *file = fopen(out, "wb+");
+    FILE *h264_file = fopen(h264, "wb+");
+    if (!file) {
+        printf("file == NUL");
+        goto __ERROR;
+    }
+    
+    //打开设备
+    fmt_ctx = open_dev();
+    if (!fmt_ctx) {
+        printf("fmt_ctx == NULL\n");
+        goto __ERROR;
+    }
+    
+    //打开编码器
+    open_encoder(V_WIDTH, V_HEIGHT, &enc_ctx);
+    
+    //创建AVFrame
+    AVFrame *frame = create_frame(V_WIDTH, V_HEIGHT);
+    
+    //AVPacket
+    AVPacket *newpkt = av_packet_alloc();//分配编码后的数据空间
+    if (!newpkt) {
+        printf("newpkt == NUL");
+    }
+    
+    
+    //实时录制
+    while (rec_status) {
+        ret = av_read_frame(fmt_ctx, &pkt);
+        if(ret == -35) {
+            ret = 0;
+            av_packet_unref(&pkt);
+            continue;
+        }
+        
+        if(ret < 0){
+            av_packet_unref(&pkt);
+            break;
+        }
+        printf("pkt size %d(%p)\n", pkt.size, pkt.data); //pkt size 2048(0x1048d3a00) 0
+        
+        
+        //写文件
+        //fwrite(pkt.data, 1, pkt.size, file);
+        //fwrite(pkt.data, 1, 460800, file);
+        //fflush(file);
+        
+        //NV12转YUV420P
+        
+        //读取的格式为 NV12
+        //YYYYYYYYY UVUV
+        
+        //转为YUV420P
+        //YYYYYYYYY UUVV
+        memcpy(frame->data[0], pkt.data, 307200);//Y数据 640x480 = 307200
+        //307200之后就是UV数据
+        for (int i = 0; i < 307200 / 4; i++) {
+            frame->data[1][i] = pkt.data[307200 + i * 2];
+            frame->data[2][i] = pkt.data[307200 + i * 2 + 1];
+        }
+        //        fwrite(frame->data[0], 1, 307200, file);
+        //        fwrite(frame->data[1], 1, 307200/4, file);
+        //        fwrite(frame->data[2], 1, 307200/4, file);
+        //        fflush(file);
+        
+        //H264编码
+        frame->pts = base++;
+        encode(enc_ctx, frame, newpkt, h264_file);
+        
+        
+        av_packet_unref(&pkt);
+    }
+    
+    //H264编码 - 输出缓存区数据
+    encode(enc_ctx, NULL, newpkt, h264_file);
+    
+__ERROR:
+    
+    //关闭设备释放上下文
+    if (fmt_ctx) {
+        avformat_close_input(&fmt_ctx);
+    }
+    
+    //关闭文件
+    if (file) {
+        fclose(file);
+    }
+    
+    
+    av_log(NULL, AV_LOG_DEBUG, "Finish!!!\n");
+    return;
+}
+
+
+
+void set_status(int status) {
+    rec_status = status;
+}
+
+```
+
+使用`ffplay video.h264`播放h264视频
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
