--- a/Basic/012_推流FLV.md
+++ b/Basic/012_推流FLV.md
@@ -66,7 +66,19 @@ ln -s /usr/local/Cellar/openssl@1.1/1.1.1k/lib/pkgconfig/openssl.pc /usr/local/l
 
 ![113](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/113.png)
 
+```shell
+-I/usr/local/Cellar/rtmpdump/2.4+20151223_1/include -I/usr/local/Cellar/openssl@1.1/1.1.1k/include -L/usr/local/Cellar/rtmpdump/2.4+20151223_1/lib -L/usr/local/Cellar/openssl@1.1/1.1.1k/lib -lrtmp -lz -lssl -lcrypto
+```
 
+
+
+## FLV
+
+1.添加库文件和头文件
+
+![114](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/114.png)
+
+![115](https://github.com/winfredzen/VideoAudio/blob/main/Basic/image/115.png)
 
 
 
