基本信息查询命令

--- a/Level1/001_基本信息查询命令.md
+++ b/Level1/001_基本信息查询命令.md
@@ -45,21 +45,65 @@ libpostproc    56.  5.100 / 56.  5.100
 
 ![004](https://github.com/winfredzen/VideoAudio/blob/main/Level1/images/004.png)
 
+输出太多了，可以分屏看`./ffmpeg -codecs | more`
+
+```shell
+ D..... = Decoding supported
+ .E.... = Encoding supported
+ ..V... = Video codec
+ ..A... = Audio codec
+ ..S... = Subtitle codec 字幕
+ ..D... = Data codec
+ ..T... = Attachment codec
+ ...I.. = Intra frame-only codec 帧内编码
+ ....L. = Lossy compression 有损压缩
+ .....S = Lossless compression 无损压缩
+```
+
+比如要查询H264编解码器，`./ffmpeg -codecs | grep 264` 
+
+```shell
+wangzhen@192 bin % ./ffmpeg -codecs | grep 264 
+ffmpeg version N-107056-g93505a9095 Copyright (c) 2000-2022 the FFmpeg developers
+  built with Apple clang version 12.0.0 (clang-1200.0.32.29)
+  configuration: --prefix=/Users/wangzhen/Movies/code/output --enable-debug=3 --enable-shared --disable-static --enable-gpl --enable-nonfree --enable-libfdk-aac --enable-libx264 --enable-libx265 --enable-libopus
+  libavutil      57. 26.100 / 57. 26.100
+  libavcodec     59. 33.100 / 59. 33.100
+  libavformat    59. 24.100 / 59. 24.100
+  libavdevice    59.  6.100 / 59.  6.100
+  libavfilter     8. 40.100 /  8. 40.100
+  libswscale      6.  6.100 /  6.  6.100
+  libswresample   4.  6.100 /  4.  6.100
+  libpostproc    56.  5.100 / 56.  5.100
+ DEV.LS h264                 H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (encoders: libx264 libx264rgb h264_videotoolbox )
+```
 
 
 
+**formats**  
 
+列出支持的格式
 
+![005](https://github.com/winfredzen/VideoAudio/blob/main/Level1/images/005.png)
 
+也可以过滤，如`./ffmpeg -formats | grep mp4`
 
-
-
-
-
-
-
-
-
+```shell
+wangzhen@192 bin % ./ffmpeg -formats | grep mp4
+ffmpeg version N-107056-g93505a9095 Copyright (c) 2000-2022 the FFmpeg developers
+  built with Apple clang version 12.0.0 (clang-1200.0.32.29)
+  configuration: --prefix=/Users/wangzhen/Movies/code/output --enable-debug=3 --enable-shared --disable-static --enable-gpl --enable-nonfree --enable-libfdk-aac --enable-libx264 --enable-libx265 --enable-libopus
+  libavutil      57. 26.100 / 57. 26.100
+  libavcodec     59. 33.100 / 59. 33.100
+  libavformat    59. 24.100 / 59. 24.100
+  libavdevice    59.  6.100 / 59.  6.100
+  libavfilter     8. 40.100 /  8. 40.100
+  libswscale      6.  6.100 /  6.  6.100
+  libswresample   4.  6.100 /  4.  6.100
+  libpostproc    56.  5.100 / 56.  5.100
+ D  mov,mp4,m4a,3gp,3g2,mj2 QuickTime / MOV
+  E mp4             MP4 (MPEG-4 Part 14)
+```
 
 
 
