--- a/Level1/002_录制命令.md
+++ b/Level1/002_录制命令.md
@@ -1,5 +1,9 @@
 # 录制命令
 
+可参考：
+
++ [avfoundation](https://ffmpeg.org/ffmpeg-devices.html#avfoundation) - 官方关于avfoundation的说明
+
 
 
 Mac OS下常规采用的是使用avfoundation设备采集数据
@@ -112,9 +116,27 @@ ffplay /Users/wangzhen/Desktop/out.wav
 
 **采集OS X桌面**
 
+```shell
+    ffmpeg -f avfoundation -i "Capture screen 0" -r:v 30 out.mp4
+```
+
+>  `-r:v`的说明， 可参考：
+>
+> + [https://ffmpeg.org/ffmpeg.html#Video-Options](https://ffmpeg.org/ffmpeg.html#Video-Options)
+>
+> > *-r[:stream_specifier] fps (input/output,per-stream)*
+> >
+> > Set frame rate (Hz value, fraction or abbreviation). 设置帧率
 
 
 
+**采集音频和视频**
+
+```shell
+    ffmpeg -f avfoundation -i "0:0" out.aac
+```
+
+> `0:0`分别指定了第0个视频设备和第0个音频设备
 
 
 
