--- a/Level1/003_分解复用命令.md
+++ b/Level1/003_分解复用命令.md
@@ -28,7 +28,7 @@ ffmpeg -i input.mp4 -vcodec copy -an out.h264
 
 > `vcodec` -  指定视频编码器，`copy` 指明只拷贝，不做编解码
 >
-> `an` - a` 代表音频，`n` 代表 `no` 也就是无音频的意思
+> `an` - `a` 代表音频，`n` 代表 `no` 也就是无音频的意思
 
 抽取后，可直接使用`ffplay out.h264` 播放
 
