处理原始数据命令

--- a/Level1/004_处理原始数据命令.md
+++ b/Level1/004_处理原始数据命令.md
@@ -6,3 +6,39 @@
 
 
 
+**YUV**
+
+```shell
+ffmpeg -i input.mp4 -an -c:v rawvideo -pixel_format yuv420p out.yuv
+```
+
+如下的例子：
+
+```shell
+ffmpeg -i input.mp4 -an -c:v rawvideo -pix_fmt yuv420p out.yuv
+```
+
+![014](https://github.com/winfredzen/VideoAudio/blob/main/Level1/images/014.png)
+
+然后使用`ffplay`播放，需指定大小
+
+```shell
+ffplay -s 1280x720 out.yuv
+```
+
+
+
+**PCM**
+
+```sh
+ffmpeg -i out.mp4 -vn -ar 44100 -ac 2 -f s16le out.pcm
+```
+
+> 采样率 通道数 位深
+
+播放pcm数据
+
+```shell
+ffplay -ar 44100 -ac 2 -f s16le -i out.pcm
+```
+
